--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -9,15 +9,17 @@ jobs:
       matrix:
         python-version: ["3.14"]
     steps:
-    - uses: actions/checkout@v5
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install .
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        export PYTHONPATH=$PYTHONPATH:$(pwd)/src
+        pylint src/llm_commit tests
